crates/elenchus-parser/tests/snapshots/errors__fact_missing_predicate.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(\"FACT lonely\\n\")"
---
Syntax Error at line 1, col 6: FACT expects an atom: <Subject> <predicate> [<object>]
  | FACT lonely
  |      ^--- here
